# kg1

./: .gitignore  LICENSE  README.md  kg1.code-workspace  pse.md  pyproject.toml  scratch.md  sweep.yaml  urls.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  notes.md  package-lock.json  package.json  pyproject.toml  run.py  tsconfig copy.json  tsconfig.json
backend/app/: config.py  db.py  llm.py  main.py  run.py
backend/app/domain/: __init__.py  node.py  url.py
backend/app/services/: __init__.py  concepts.py  index.py  indexing.py
backend/app/utils/: __init__.py  auth.py  chunker.py  embedder.py  logger.py  parse.py  processor.py
backend/archive/: old-node.ts  old-repo.ts
backend/prisma/: schema.prisma  seed.js  seed.ts
backend/prisma/migrations/20230924143513_init/: migration.sql
backend/prisma/migrations/20230926191149_add_embedding_cols/: migration.sql
backend/scripts/: insert.js  insert.ts  node.js  node.ts  read.js  read.ts  seed-tags.js  seed-tags.ts
backend/src/: app.js  app.ts  augmentor.js  augmentor.ts  db.py  embedder.js  embedder.ts  llm.ts  main.py  node.js  node.ts  parser.js  parser.ts  repo.js  repo.ts  scraper.js  scraper.ts  server.js  server.ts  test.ts
backend/src/domain/: __init__.py  node.py  url.py
backend/src/domain/entities/: index.ts  note.ts  (+1 more)
backend/src/utils/: __init__.py  chunker.py  embedder.py  processor.py  uuid.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20240114120525_init.sql  20240428072858_add_users_table_and_triggers.sql  20240428112033_add_text_node_concepts.sql
backend/tests/: api.test.js  api.test.ts  app.test.ts  parser.test.js  parser.test.ts  scraper.test.js  scraper.test.ts
backend/tests/fixtures/: body.md  front-matter-empty.md  front-matter-title-tags.md  front-matter-title.md  multiple-links-same-line.md  multiple-links.md  note-with-link-same-line.md  note-with-multiple-links.md  single-link.md
research/: .example.env  Pipfile  README.md  concepts.py  concepts_articles_graph.html  data.ipynb  graph.ipynb  idea.py  kg.ipynb  pdf.ipynb  pyproject.toml  query_to_graph.ipynb
research/lib/: setup.py
research/lib/db/: __init__.py
research/lib/lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/lib/llm/: __init__.py
(+113 files in other folders)
