[project]
name = "research"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.16.3",
    "google-cloud-storage>=2.18.2",
    "instructor>=1.5.1",
    "ipython>=8.28.0",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "openai>=1.51.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "supabase>=2.9.0",
    "trafilatura>=1.12.2",
    "txtai>=7.4.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "ipykernel>=6.29.5",
]
